fix iframe visibility

--- a/src/$scss$/_Normalize.scss
+++ b/src/$scss$/_Normalize.scss
@@ -64,7 +64,7 @@
         }
 
         // if there is nothing, why there is needs content?
-        *:not(img, canvas, ui-icon, video, picture, input, ui-calendar, ui-status, ui-statusbar, ui-navbar, ui-taskbar, ui-task):empty { content-visibility: hidden !important; }
+        *:not(img, canvas, ui-icon, video, picture, input, ui-calendar, ui-status, ui-statusbar, ui-navbar, ui-taskbar, ui-task, iframe):empty { content-visibility: hidden !important; }
 
         //
         [data-dragging], :where(ui-frame, ui-modal, .ui-grid-item):active {
